--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-  <html lang="es">
+  <html lang="es" class="html">
     <head>
       <title>Hasta La Madeja</title>
       <link rel="shortcut icon" href="img/logo2.png">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
       <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,31 +14,49 @@
     </head>
     <body>
       <!-- BARRA DE NAVEGACION -->
-      <header id="home">
-        <nav class="nav">
-          <div class="navbar">
-            <a href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
-            <ul>
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="galeria.html">GALERIA</a></li>
-              <li><a href="nosotros.html">NOSOTROS</a></li>
-              <li><a href="contacto.html">CONTACTO</a></li>
-              <li><a href="clientes.html">CLIENTES</a></li>
-            </ul>
-          </div> 
-        </nav>
-      </header>
-
-      
-
-
-
-     <!-- PROMOCIONES-->
-      <section class="home_promos">
-        <div class="home_promos_contenedor">
-          <img src="img/img27.jpeg" alt="Promociones" class="home_promos_contenedor_img">
+      <nav id="home" class="navbar navbar-expand-lg navbar-menu">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="index.html">HOME</a>
+              <a class="nav-link" href="galeria.html">GALERIA</a>
+              <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+              <a class="nav-link" href="contacto.html">CONTACTO</a>
+              <a class="nav-link" href="clientes.html">CLIENTES</a>
+            </div>
+          </div>
         </div>
-      </section>
+      </nav>
+
+     <!-- PROMOCIONES // CAROUSEL -->
+     <div class="promociones">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
 
 
       <!-- INFO -->
@@ -49,67 +69,75 @@
       <!-- CATEGORIAS-->
       <section class="home_categorias">
         <div class="home_categorias_contenedor">
-          <div class="home_categorias_cat">
+          <div class="home_categorias_cat" data-aos="zoom-in" data-aos-duration="2500">
             <img src="img/img2.1.png" alt="Categoria" class="home_categorias_cat_img">
             <h2 class="home_categorias_cat_nombre">CATEGORIA</h2>
           </div>
-          <div class="home_categorias_cat">
+          <div class="home_categorias_cat" data-aos="zoom-in" data-aos-duration="2500">
             <img src="img/img7.3.png" alt="Categoria" class="home_categorias_cat_img">
             <h2 class="home_categorias_cat_nombre">CATEGORIA</h2>
 
           </div>
-          <div class="home_categorias_cat">
+          <div class="home_categorias_cat" data-aos="zoom-in" data-aos-duration="2500">
             <img src="img/img23.1.png" alt="Categoria" class="home_categorias_cat_img">
             <h2 class="home_categorias_cat_nombre">CATEGORIA</h2>
           </div>
         </div>
       </section>
 
-      <!-- PREGUNTAS FRECUENTES -->
-      <section class="home_preguntas">
-        <h2 class="home_preguntas_titulo">PREGUNTAS FRECUENTES</h2>
-        <div class="home_preguntas_contenedor">
-          <div class="home_preguntas_frecuentes home_frecuentes_1">
-            <p>PREGUNTA 1</p>
+      <!-- PREGUNTAS -->
+      <div class="accordion accordion-flush container preguntas" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header preguntas-frecuentes" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Accordion Item #1
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse preguntas-respuestas" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
           </div>
-
-          <!-- LAS RESPUESTAS ESTAN COMENTADAS PARA QUE SE PUEDA VER COMO TIENE QUE QUEDAR, LA IDEA ES QUE SE DESPLIGUEN SEGUN EL CLICK EN CADA PREGUNTA -->
-
-          <!--
-          <div class="home_preguntas_respuesta home_respuesta_1">
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque minima id explicabo deleniti? Enim, vero inventore reiciendis maiores ipsum libero adipisci, excepturi tempore ducimus obcaecati a quasi cum suscipit provident!</P>
-          </div> -->
-          <div class="home_preguntas_frecuentes home_frecuentes_2">
-            <p>PREGUNTA 2</p>
-          </div>
-          <!--
-          <div class="home_preguntas_respuesta home_respuesta_2">
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque minima id explicabo deleniti? Enim, vero inventore reiciendis maiores ipsum libero adipisci, excepturi tempore ducimus obcaecati a quasi cum suscipit provident!</P>
-          </div> -->
-          <div class="home_preguntas_frecuentes home_frecuentes_3">
-            <p>PREGUNTA 3</p>
-          </div>
-          <!--
-          <div class="home_preguntas_respuesta home_respuesta_3">
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque minima id explicabo deleniti? Enim, vero inventore reiciendis maiores ipsum libero adipisci, excepturi tempore ducimus obcaecati a quasi cum suscipit provident!</P>
-          </div> -->
-          <div class="home_preguntas_frecuentes home_frecuentes_4">
-            <p>PREGUNTA 4</p>
-          </div>
-          <!--
-          <div class="home_preguntas_respuesta home_respuesta_4">
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque minima id explicabo deleniti? Enim, vero inventore reiciendis maiores ipsum libero adipisci, excepturi tempore ducimus obcaecati a quasi cum suscipit provident!</P>
-          </div> -->
-          <div class="home_preguntas_frecuentes home_frecuentes_5">
-            <p>PREGUNTA 5</p>
-          </div>
-          <!--
-          <div class="home_preguntas_respuesta home_respuesta_5">
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque minima id explicabo deleniti? Enim, vero inventore reiciendis maiores ipsum libero adipisci, excepturi tempore ducimus obcaecati a quasi cum suscipit provident!</P>
-          </div> -->
         </div>
-        <p class="home_preguntas_dudas">Si no pudimos resolver tus dudas <a href="contacto.html">ponete en contacto</a> con nosotros</p>
-      </section>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Accordion Item #2
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Accordion Item #3
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseThree">
+              Accordion Item #4
+            </button>
+          </h2>
+          <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingFive">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+              Accordion Item #5
+            </button>
+          </h2>
+          <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          </div>
+        </div>
+      </div>
 
 
       <!-- BOTON VOLVER A ARRIBA -->
@@ -138,6 +166,10 @@
     
       </footer> 
 
-
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     </body>
   </html> 
