--- a/nosotros.html
+++ b/nosotros.html
@@ -3,28 +3,34 @@
     <head>
       <title>Hasta La Madeja</title>
       <link rel="shortcut icon" href="img/logo2.png">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
       <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap" rel="stylesheet">
       <meta charset="UTF-8>">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
       <!-- BARRA DE NAVEGACION -->
-      <header id="home">
-        <nav class="nav">
-          <div class="navbar">
-            <a href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
-            <ul>
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="galeria.html">GALERIA</a></li>
-              <li><a href="nosotros.html">NOSOTROS</a></li>
-              <li><a href="contacto.html">CONTACTO</a></li>
-              <li><a href="clientes.html">CLIENTES</a></li>
-            </ul>
-          </div> 
-        </nav>
-      </header>
+      <nav id="home" class="navbar navbar-expand-lg navbar-menu">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="index.html">HOME</a>
+              <a class="nav-link" href="galeria.html">GALERIA</a>
+              <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+              <a class="nav-link" href="contacto.html">CONTACTO</a>
+              <a class="nav-link" href="clientes.html">CLIENTES</a>
+            </div>
+          </div>
+        </div>
+      </nav>
 
       <!-- MAIN -->
       <main class="nosotros_main">
@@ -102,7 +108,13 @@
             </div>
           </div>
     
-      </footer> 
+      </footer>
+
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
     </body>
   </html> 
