upgrade footer responsive bootstrap

--- a/clientes.html
+++ b/clientes.html
@@ -420,21 +420,21 @@
 
       <!-- PIE DE PAGINA -->
       <footer>
-          <div class="footer">
-            <div class="copy_redes">
-              <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
-              <ul> 
-                <li><a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png" alt="Instagram" class="instagram icono_footer"></a></li>
-                <li><a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png" alt="Tiktok" class="tiktok icono_footer"></a></li>
-                <li><a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp"  class="whatsapp icono_footer"></a></li>
-              </ul>
+        <div class="container">
+            <div class="row">
+            <div class="col-lg-6 col-sm-12 text-center footer__txt">
+                <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
             </div>
-            
-            <div class="design">
-              <p>Design by <a href="https://www.linkedin.com/in/juan-cruz-liboreiro-justel/" target="_blank">JUAN CRUZ LIBOREIRO</a> - 2022</p>
+            <div class="col-lg-6 col-sm-12 text-center footer__redes redes"> 
+                    <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png" alt=""Instagram class="instagram icono_footer"></a>
+                    <a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png" alt="Tiktok" class="tiktok icono_footer"></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp"  class="whatsapp icono_footer"></a>
             </div>
-          </div>
-    
+            <div class="col-lg-12 col-sm-12 text-center footer__txt">
+                <p>Design by <a href="https://www.linkedin.com/in/juan-cruz-liboreiro-justel/" target="_blank">JUAN CRUZ LIBOREIRO</a> - 2022</p>
+            </div>
+            </div>
+        </div>
       </footer>
 
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
