--- a/clientes.html
+++ b/clientes.html
@@ -18,7 +18,7 @@
       <nav id="home" class="navbar navbar-expand-lg navbar-menu">
         <div class="container">
           <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
