--- a/nosotros.html
+++ b/nosotros.html
@@ -33,54 +33,64 @@
       </nav>
 
       <!-- MAIN -->
-      <main class="nosotros_main">
-        <!-- PORTADA -->
-        <div class="nosotros_portada">
-          <h1 class="nosotros_titulo">ACERCA DE NOSOTROS</h1>
-          <div class="nosotros_polaroid">
-            <img src="img/img7.2.png" alt="Portada" class="nosotros_portada_img">
-          </div>
+      <main>
+        <div class="container">
+            <div class="row">
+              <div class="col text-center">
+                <h1 class="nosotros_titulo">ACERCA DE NOSOTROS</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col nosotros_polaroid">
+                <img src="img/img7.2.png" alt="Portada" class="nosotros_portada_img">
+              </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-sm-12">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="nosotros_texto">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat porro quibusdam dicta nemo quae excepturi dolor ipsa, fugit saepe totam nostrum enim rem praesentium impedit distinctio cum nam. Reprehenderit?</p>
+                              </div>
+                              <div class="nosotros_polaroid">
+                                <img src="img/img3.png" alt="Imagen">
+                              </div>
+                              <div class="nosotros_texto">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
+                              </div>
+                              <div class="nosotros_polaroid">
+                                <img src="img/img28.png" alt="Imagen">
+                              </div>
+                              <div class="nosotros_texto">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
+                              </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-12">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="nosotros_polaroid">
+                                <img src="img/img12.jpeg" alt="Imagen">
+                              </div>
+                              <div class="nosotros_texto">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat porro quibusdam dicta nemo quae excepturi dolor ipsa, fugit saepe totam nostrum enim rem praesentium impedit distinctio cum nam. Reprehenderit?</p>
+                              </div>
+                              <div class="nosotros_polaroid">
+                                <img src="img/img16.jpeg" alt="Imagen">
+                              </div>
+                              <div class="nosotros_texto">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
+                              </div>
+                              <div class="nosotros_polaroid">
+                                <img src="img/img10.jpeg" alt="Imagen">
+                              </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- CONTENIDO -->
-        <section class="nosotros">
-          <div class="nosotros_contendio">
-            <div class="nosotros_texto">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat porro quibusdam dicta nemo quae excepturi dolor ipsa, fugit saepe totam nostrum enim rem praesentium impedit distinctio cum nam. Reprehenderit?</p>
-            </div>
-            <div class="nosotros_polaroid">
-              <img src="img/img3.png" alt="Imagen">
-            </div>
-            <div class="nosotros_texto">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
-            </div>
-            <div class="nosotros_polaroid">
-              <img src="img/img28.png" alt="Imagen">
-            </div>
-            <div class="nosotros_texto">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
-            </div>
-          </div>
-
-          <div class="nosotros_contendio">
-            <div class="nosotros_polaroid">
-              <img src="img/img12.jpeg" alt="Imagen">
-            </div>
-            <div class="nosotros_texto">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat porro quibusdam dicta nemo quae excepturi dolor ipsa, fugit saepe totam nostrum enim rem praesentium impedit distinctio cum nam. Reprehenderit?</p>
-            </div>
-            <div class="nosotros_polaroid">
-              <img src="img/img16.jpeg" alt="Imagen">
-            </div>
-            <div class="nosotros_texto">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
-            </div>
-            <div class="nosotros_polaroid">
-              <img src="img/img10.jpeg" alt="Imagen">
-            </div>
-          </div>
-
-        </section>
-      </main>
+    </main>
 
       <!-- BOTON VOLVER A ARRIBA -->
 
