--- a/contacto.html
+++ b/contacto.html
@@ -36,31 +36,56 @@
 
         <!-- TITULO PAGINA -->
 
-        <h1 class="contacto_titulo">COMUNICATE CON NOSOTROS</h1>
+        <h1 class="container text-center contacto_titulo">COMUNICATE CON NOSOTROS</h1>
 
 
-        <!-- CONTENIDO -->
+        <!-- FORMULARIO -->
 
-        <div class="contacto_contenedor">
-          <form action="" class="contacto_formulario">
-            <!--  NOMBRE -->
-              <input type="text" required placeholder="Nombre">
-            <!-- APELLIDO -->
-              <input type="text" required placeholder="Apellido">
-            <!-- MAIL -->
-              <input type="email" required placeholder="Email">
-            <!-- MENSAJE -->
-            <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Dejanos tu mensaje..."></textarea>
-            <!-- BOTON ENVIAR -->
-            <input type="submit" value="Enviar" class="contacto_btn_enviar">
-
-          </form>
-        </div>
+        <section class="contacto">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6 mx-auto">
+                <div class="card formulario">
+                  <div class="card-body  formulario">
+                    <div class="form p-3">
+                      <div class="form-row pb-4">
+                        <div class="col-lg-12">
+                          <input type="text" class="efecto_1" placeholder="Nombre">
+                        </div>
+                      </div>
+                      <div class="form-row pb-4">
+                        <div class="col-lg-12">
+                          <input type="text" class="efecto_1" placeholder="Apellido">
+                        </div>
+                      </div>
+                      <div class="form-row pb-4">
+                        <div class="col-lg-12">
+                          <input type="email" class="efecto_1" placeholder="Email">
+                        </div>
+                      </div>
+                      <div class="form-row pt-5">
+                        <div class="col-lg-12">
+                          <!--<input type="text" class="efecto_1" placeholder="Dejanos tu mensaje...">-->
+                          <textarea class="efecto_1" col="30" row="10" placeholder="Dejanos tu mensaje..."></textarea>
+                        </div>
+                      </div>
+                      <div class="form-row pt-4">
+                        <div class="col-lg-12">
+                          <button class="btn_1">ENVIAR</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
 
         <!-- MENSAJE AL CLIENTE -->
 
-        <p class="contacto_respuesta">Dejanos tu mensaje y te respondemos en menos de 24hs.</p>
+        <p class="container text-center contacto_respuesta">Dejanos tu mensaje y te respondemos en menos de 24hs.</p>
 
       </main>
 
