--- a/galeria.html
+++ b/galeria.html
@@ -42,17 +42,160 @@
 
         <!-- GALERIA -->
         
-        <div class="galeria">
-          <div class="galeria__item"><img src="img/img1.jpeg" alt="" class="galeria__img"></div>
-          <div class="galeria__item"><img src="img/img2.jpeg" alt="" class="galeria__img"></div>
-          <div class="galeria__item"><img src="img/img3.png" alt="" class="galeria__img"></div>
-          <div class="galeria__item"><img src="img/img4.jpeg" alt="" class="galeria__img"></div>
-          <div class="galeria__item"><img src="img/img5.jpeg" alt="" class="galeria__img"></div>
-          <div class="galeria__item"><img src="img/img6.jpeg" alt="" class="galeria__img"></div>
-          <div class="galeria__item"><img src="img/img7.png" alt="" class="galeria__img"></div>
-          <div class="galeria__item"><img src="img/img8.jpeg" alt="" class="galeria__img"></div>
-          <div class="galeria__item"><img src="img/img9.jpeg" alt="" class="galeria__img"></div>
-        </div>  
+        <section id="galeria" class="container">
+          <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img1.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img2.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img3.png" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img4.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img5.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img6.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img7.png" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img8.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img9.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img10.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img11.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img12.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img13.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img14.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img15.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img16.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img17.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img18.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img19.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img20.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img21.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img22.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img23.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img24.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img25.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img26.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img27.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img28.png" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img1.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="polaroid">
+                <img src="img/img2.jpeg" alt="Galeria imagen">
+              </div>
+            </div>
+          </div>
+        </section> 
 
       </main>
 
