--- a/index.html
+++ b/index.html
@@ -32,112 +32,181 @@
         </div>
       </nav>
 
+
      <!-- PROMOCIONES // CAROUSEL -->
-     <div class="promociones">
+    <div class="promociones">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+              </div>
+              <div class="carousel-item">
+                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+              </div>
+              <div class="carousel-item">
+                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+              </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
       </div>
-    </div>
+  </div>
 
 
 
-      <!-- INFO -->
-      <div class="home_info">
-        <h2>Hasta la Madeja</h2>
-        <p>¡Trabajos artesanales y personalizados para vos!</p>
+  <!-- INFO -->
+  <div class="container">
+      <div class="row">
+          <div class="col text-center home_info">
+              <h2 data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">Hasta la Madeja</h2>
+              <p data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">¡Trabajos artesanales y
+                  personalizados para vos!</p>
+          </div>
       </div>
+  </div>
 
 
-      <!-- CATEGORIAS-->
-      <section class="home_categorias">
-        <div class="home_categorias_contenedor">
-          <div class="home_categorias_cat" data-aos="zoom-in" data-aos-duration="2500">
-            <img src="img/img2.1.png" alt="Categoria" class="home_categorias_cat_img">
-            <h2 class="home_categorias_cat_nombre">CATEGORIA</h2>
+
+  <!-- CATEGORIAS-->
+  <section class="categorias">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-4 col-md-12 col-sm-12" data-aos="flip-left" data-aos-duration="3000">
+                  <div class="categorias__carousel">
+                      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-inner">
+                              <div class="carousel-item active categorias__polaroid">
+                                  <img src="img/img2.1.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item categorias__polaroid">
+                                  <img src="img/img2.1.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item categorias__polaroid">
+                                  <img src="img/img2.1.png" class="d-block w-100" alt="...">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-12 col-sm-12" data-aos="flip-up" data-aos-duration="3000">
+                  <div class="categorias__carousel">
+                      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-inner">
+                              <div class="carousel-item active categorias__polaroid">
+                                  <img src="img/img7.3.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item categorias__polaroid">
+                                  <img src="img/img7.3.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item categorias__polaroid">
+                                  <img src="img/img7.3.png" class="d-block w-100" alt="...">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-12 col-sm-12" data-aos="flip-right" data-aos-duration="3000">
+                  <div class="categorias__carousel">
+                      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-inner">
+                              <div class="carousel-item active categorias__polaroid">
+                                  <img src="img/img23.1.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item categorias__polaroid">
+                                  <img src="img/img23.1.png" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item categorias__polaroid">
+                                  <img src="img/img23.1.png" class="d-block w-100" alt="...">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="home_categorias_cat" data-aos="zoom-in" data-aos-duration="2500">
-            <img src="img/img7.3.png" alt="Categoria" class="home_categorias_cat_img">
-            <h2 class="home_categorias_cat_nombre">CATEGORIA</h2>
+      </div>
+  </section>
 
-          </div>
-          <div class="home_categorias_cat" data-aos="zoom-in" data-aos-duration="2500">
-            <img src="img/img23.1.png" alt="Categoria" class="home_categorias_cat_img">
-            <h2 class="home_categorias_cat_nombre">CATEGORIA</h2>
-          </div>
-        </div>
-      </section>
-
-      <!-- PREGUNTAS -->
-      <div class="accordion accordion-flush container preguntas" id="accordionFlushExample">
-        <div class="accordion-item">
+  <!-- PREGUNTAS -->
+  <div class="accordion accordion-flush container preguntas" id="accordionFlushExample">
+      <div class="accordion-item">
           <h2 class="accordion-header preguntas-frecuentes" id="flush-headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              Accordion Item #1
-            </button>
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  Pregunta 1
+              </button>
           </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse preguntas-respuestas" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+          <div id="flush-collapseOne" class="accordion-collapse collapse preguntas-respuestas"
+              aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+              </div>
           </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              Accordion Item #2
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              Accordion Item #3
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingFour">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseThree">
-              Accordion Item #4
-            </button>
-          </h2>
-          <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingFive">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-              Accordion Item #5
-            </button>
-          </h2>
-          <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-          </div>
-        </div>
       </div>
+      <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  Preguta 2
+              </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+              </div>
+          </div>
+      </div>
+      <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  Pregunta 3
+              </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+              </div>
+          </div>
+      </div>
+      <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseThree">
+                  Pregunta 4
+              </button>
+          </h2>
+          <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+              </div>
+          </div>
+      </div>
+      <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                  Pregunta 5
+              </button>
+          </h2>
+          <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+              </div>
+          </div>
+      </div>
+  </div>
 
 
       <!-- BOTON VOLVER A ARRIBA -->
