--- a/galeria.html
+++ b/galeria.html
@@ -1,240 +1,259 @@
 <!DOCTYPE html>
-  <html lang="es">
-    <head>
-      <title>Hasta La Madeja</title>
-      <link rel="shortcut icon" href="img/logo2.png">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap" rel="stylesheet">
-      <meta charset="UTF-8>">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="viewport" contet="widht=device-widht, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
-    </head>
-    <body>
-      <!-- BARRA DE NAVEGACION -->
-      <nav id="home" class="navbar navbar-expand-lg navbar-menu">
-        <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
-          <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" href="index.html">HOME</a>
-              <a class="nav-link" href="galeria.html">GALERIA</a>
-              <a class="nav-link" href="nosotros.html">NOSOTROS</a>
-              <a class="nav-link" href="contacto.html">CONTACTO</a>
-              <a class="nav-link" href="clientes.html">CLIENTES</a>
-            </div>
-          </div>
+<html lang="es">
+
+<head>
+  <title>Hasta La Madeja</title>
+  <link rel="shortcut icon" href="img/logo2.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap"
+    rel="stylesheet">
+  <meta charset="UTF-8>">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"
+    contet="widht=device-widht, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
+</head>
+
+<body>
+  <!-- BARRA DE NAVEGACION -->
+  <nav id="home" class="navbar navbar-expand-lg navbar-menu">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="index.html">HOME</a>
+          <a class="nav-link" href="galeria.html">GALERIA</a>
+          <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+          <a class="nav-link" href="contacto.html">CONTACTO</a>
+          <a class="nav-link" href="clientes.html">CLIENTES</a>
         </div>
-      </nav>
-
-      <main class="galeria_main">
-        <!-- TITULO -->
-        <div class="galeria_titulo">
-          <h1>NUESTROS TRABAJOS</h1>
-          <p>¡Hola, queremos mostrarte algunos de nuestros trabajos!</p>
-        </div>
-
-        <!-- GALERIA -->
-        
-        <section id="galeria" class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img1.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img2.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img3.png" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img4.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img5.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img6.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img7.png" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img8.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img9.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img10.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img11.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img12.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img13.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img14.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img15.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img16.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img17.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img18.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img19.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img20.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img21.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img22.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img23.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img24.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img25.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img26.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img27.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img28.png" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img1.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="polaroid">
-                <img src="img/img2.jpeg" alt="Galeria imagen">
-              </div>
-            </div>
-          </div>
-        </section> 
-
-      </main>
-
-
-
-      <!-- BOTON VOLVER A ARRIBA -->
-
-      <div class="btn_arriba">
-        <a href="#home"><img src="img/go_up2.png" alt="Ir arriba"></a>
       </div>
+    </div>
+  </nav>
 
-
-
-
-
-      <!-- PIE DE PAGINA -->
-      <footer>
-        <div class="container">
-            <div class="row">
-            <div class="col-lg-6 col-sm-12 text-center footer__txt">
-                <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
-            </div>
-            <div class="col-lg-6 col-sm-12 text-center footer__redes redes"> 
-                    <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png" alt=""Instagram class="instagram icono_footer"></a>
-                    <a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png" alt="Tiktok" class="tiktok icono_footer"></a>
-                    <a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp"  class="whatsapp icono_footer"></a>
-            </div>
-            <div class="col-lg-12 col-sm-12 text-center footer__txt">
-                <p>Design by <a href="https://www.linkedin.com/in/juan-cruz-liboreiro-justel/" target="_blank">JUAN CRUZ LIBOREIRO</a> - 2022</p>
-            </div>
-            </div>
+  <main class="galeria_main">
+    <!-- TITULO -->
+    <div class="container">
+      <div class="row">
+        <div class="col text-center galeria_titulo">
+          <h1 data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">NUESTROS TRABAJOS</h1>
+          <p data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">¡Hola, queremos mostrarte
+            algunos de nuestros trabajos!</p>
         </div>
-      </footer>
+      </div>
+    </div>
 
-      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <script>
-        AOS.init();
-      </script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <!-- GALERIA -->
 
-    </body>
-  </html> 
+    <section id="galeria" class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img1.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img2.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img3.png" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img4.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img5.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img6.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img7.png" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img8.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img9.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img10.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img11.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img12.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img13.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img14.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img15.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img16.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img17.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img18.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img19.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img20.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img21.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img22.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img23.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img24.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img25.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img26.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img27.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img28.png" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img1.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="polaroid">
+            <img src="img/img2.jpeg" alt="Galeria imagen">
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+
+
+  <!-- BOTON VOLVER A ARRIBA -->
+
+  <div class="btn_arriba">
+    <a href="#home"><img src="img/go_up2.png" alt="Ir arriba"></a>
+  </div>
+
+
+
+
+
+  <!-- PIE DE PAGINA -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12 text-center footer__txt">
+          <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
+        </div>
+        <div class="col-lg-6 col-sm-12 text-center footer__redes redes">
+          <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png" alt=""
+              Instagram class="instagram icono_footer"></a>
+          <a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png"
+              alt="Tiktok" class="tiktok icono_footer"></a>
+          <a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0"
+            target="_blank"><img src="img/whatsapp.png" alt="Whatsapp" class="whatsapp icono_footer"></a>
+        </div>
+        <div class="col-lg-12 col-sm-12 text-center footer__txt">
+          <p>Design by <a href="https://www.linkedin.com/in/juan-cruz-liboreiro-justel/" target="_blank">JUAN CRUZ
+              LIBOREIRO</a> - 2022</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
+
+</body>
+
+</html>
