mensaje clientes en index, titulo en clientes

--- a/clientes.html
+++ b/clientes.html
@@ -37,10 +37,14 @@
       <main class="clientes_main">
 
         <!-- TITULO -->
-        <div class="clientes_titulo">
-          <h1>CLIENTES</h1>
-          <P>¿Que opinan nuestros clientes sobre nosotros?</P>
-        </div>
+        <div class="container">
+          <div class="row">
+              <div class="col text-center clientes_titulo">
+                  <h1 data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">CLIENTES</h1>
+                  <p data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">¿Que opinan nuestros clientes sobre nosotros?</p>
+              </div>
+          </div>
+      </div>
 
         <!-- CAJA DE TESTIMONIOS-->
         <div class="clientes">
