--- a/index.html
+++ b/index.html
@@ -208,6 +208,15 @@
       </div>
   </div>
 
+  <!-- MENSAJE AL CLIENTE -->
+  <div class="container">
+    <div class="row">
+        <div class="col text-center home_mensaje">
+            <p>Si no pudimos resolver tus dudas <a href="contacto.html">ponete en contacto</a> con nosotros</p>
+        </div>
+    </div>
+</div>
+
 
       <!-- BOTON VOLVER A ARRIBA -->
 
