--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link rel="shortcut icon" href="img/logo2.png">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap" rel="stylesheet">
@@ -44,17 +44,17 @@
 
 
      <!-- PROMOCIONES // CAROUSEL -->
-    <div class="promociones">
+    <div class="promociones container">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
               <div class="carousel-item active">
-                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
               </div>
               <div class="carousel-item">
-                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
               </div>
               <div class="carousel-item">
-                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img" alt="...">
+                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
               </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -93,13 +93,13 @@
                   <div class="categorias__carousel">
                       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                           <div class="carousel-inner">
-                              <div class="carousel-item active categorias__polaroid">
+                              <div class="carousel-item active polaroid">
                                   <img src="img/img2.1.png" class="d-block w-100" alt="...">
                               </div>
-                              <div class="carousel-item categorias__polaroid">
+                              <div class="carousel-item polaroid">
                                   <img src="img/img2.1.png" class="d-block w-100" alt="...">
                               </div>
-                              <div class="carousel-item categorias__polaroid">
+                              <div class="carousel-item polaroid">
                                   <img src="img/img2.1.png" class="d-block w-100" alt="...">
                               </div>
                           </div>
@@ -110,13 +110,13 @@
                   <div class="categorias__carousel">
                       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                           <div class="carousel-inner">
-                              <div class="carousel-item active categorias__polaroid">
+                              <div class="carousel-item active polaroid">
                                   <img src="img/img7.3.png" class="d-block w-100" alt="...">
                               </div>
-                              <div class="carousel-item categorias__polaroid">
+                              <div class="carousel-item polaroid">
                                   <img src="img/img7.3.png" class="d-block w-100" alt="...">
                               </div>
-                              <div class="carousel-item categorias__polaroid">
+                              <div class="carousel-item polaroid">
                                   <img src="img/img7.3.png" class="d-block w-100" alt="...">
                               </div>
                           </div>
@@ -127,13 +127,13 @@
                   <div class="categorias__carousel">
                       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                           <div class="carousel-inner">
-                              <div class="carousel-item active categorias__polaroid">
+                              <div class="carousel-item active polaroid">
                                   <img src="img/img23.1.png" class="d-block w-100" alt="...">
                               </div>
-                              <div class="carousel-item categorias__polaroid">
+                              <div class="carousel-item polaroid">
                                   <img src="img/img23.1.png" class="d-block w-100" alt="...">
                               </div>
-                              <div class="carousel-item categorias__polaroid">
+                              <div class="carousel-item polaroid">
                                   <img src="img/img23.1.png" class="d-block w-100" alt="...">
                               </div>
                           </div>
