--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
       <link rel="shortcut icon" href="img/logo2.png">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap" rel="stylesheet">
@@ -75,7 +75,6 @@
                       </div>
                       <div class="form-row pt-5">
                         <div class="col-lg-12">
-                          <!--<input type="text" class="efecto_1" placeholder="Dejanos tu mensaje...">-->
                           <textarea class="efecto_1" col="30" row="10" placeholder="Dejanos tu mensaje..."></textarea>
                         </div>
                       </div>
