--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
       <link rel="shortcut icon" href="img/logo2.png">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap" rel="stylesheet">
@@ -44,14 +44,14 @@
 
       <!-- MAIN -->
       <main>
-        <div class="container">
+        <div class="container nosotros">
             <div class="row">
               <div class="col text-center">
                 <h1 class="nosotros_titulo">ACERCA DE NOSOTROS</h1>
               </div>
             </div>
             <div class="row">
-              <div class="col nosotros_polaroid">
+              <div class="col polaroid">
                 <img src="img/img7.2.png" alt="Portada" class="nosotros_portada_img">
               </div>
             </div>
@@ -62,13 +62,13 @@
                             <div class="nosotros_texto">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat porro quibusdam dicta nemo quae excepturi dolor ipsa, fugit saepe totam nostrum enim rem praesentium impedit distinctio cum nam. Reprehenderit?</p>
                               </div>
-                              <div class="nosotros_polaroid">
+                              <div class="polaroid">
                                 <img src="img/img3.png" alt="Imagen">
                               </div>
                               <div class="nosotros_texto">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
                               </div>
-                              <div class="nosotros_polaroid">
+                              <div class="polaroid">
                                 <img src="img/img28.png" alt="Imagen">
                               </div>
                               <div class="nosotros_texto">
@@ -80,19 +80,19 @@
                 <div class="col-lg-6 col-sm-12">
                     <div class="row">
                         <div class="col-12">
-                            <div class="nosotros_polaroid">
+                            <div class="polaroid">
                                 <img src="img/img12.jpeg" alt="Imagen">
                               </div>
                               <div class="nosotros_texto">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat porro quibusdam dicta nemo quae excepturi dolor ipsa, fugit saepe totam nostrum enim rem praesentium impedit distinctio cum nam. Reprehenderit?</p>
                               </div>
-                              <div class="nosotros_polaroid">
+                              <div class="polaroid">
                                 <img src="img/img16.jpeg" alt="Imagen">
                               </div>
                               <div class="nosotros_texto">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
                               </div>
-                              <div class="nosotros_polaroid">
+                              <div class="polaroid">
                                 <img src="img/img10.jpeg" alt="Imagen">
                               </div>
                         </div>
