modificaciones en sass

--- a/nosotros.html
+++ b/nosotros.html
@@ -60,19 +60,19 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="nosotros_texto">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat porro quibusdam dicta nemo quae excepturi dolor ipsa, fugit saepe totam nostrum enim rem praesentium impedit distinctio cum nam. Reprehenderit?</p>
+                                <p>Se dice que el crochet (o ganchillo) se convirtió en una próspera “industria casera” (especialmente en Irlanda y el Norte de Francia), sosteniendo comunidades cuyo modo de vida fue dañado por las guerras y las malas cosechas.</p>
                               </div>
                               <div class="polaroid">
                                 <img src="img/img3.png" alt="Imagen">
                               </div>
                               <div class="nosotros_texto">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
+                                <p>Los muñecos tejidos a crochet nacen en Japón a partir de los años 50, cuando la cultura japonesa se dirigió a lo cute o kawaii. Al finalizar la Segunda Guerra Mundial, un Japón derrotado y desanimado necesitaba algo que ayudara a hacer más placentero el paso de las horas, así es que abuelas y tías comenzaron a tejer gran variedad de muñecos, como una forma de entretenerse y entretener a los niños en medio del sombrío clima reinante.</p>
                               </div>
                               <div class="polaroid">
                                 <img src="img/img28.png" alt="Imagen">
                               </div>
                               <div class="nosotros_texto">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
+                                <p>El tejido a mano ha pasado de generación en generación convirtiéndose en un pasatiempo útil y estimulando el espíritu creativo de millones de pueblos a través de los tiempos. El tejido de punto sigue ocupando los primeros puestos de la moda y acaparando la atención de millones de mujeres en todo el mundo. Pero tejer a mano no es solo pasar hilos de una aguja a otra, hacer este tipo de tejido es también todo un desafío y sobre todo crear algo único.</p>
                               </div>
                         </div>
                     </div>
@@ -84,13 +84,13 @@
                                 <img src="img/img12.jpeg" alt="Imagen">
                               </div>
                               <div class="nosotros_texto">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat porro quibusdam dicta nemo quae excepturi dolor ipsa, fugit saepe totam nostrum enim rem praesentium impedit distinctio cum nam. Reprehenderit?</p>
+                                <p>Esta técnica de tejido para mí es la más romántica de todas. Las prendas tejidas a crochet son inigualables. Es ideal para prendas de bebés, pero en prendas femeninas tampoco tiene comparación.</p>
                               </div>
                               <div class="polaroid">
                                 <img src="img/img16.jpeg" alt="Imagen">
                               </div>
                               <div class="nosotros_texto">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, nostrum magnam. Vero dolorem similique quae, cumque voluptate iusto molestias quis maiores provident, optio, rem mollitia non illum saepe ipsum iste.</p>
+                                <p>El muñeco tradicional tenía cabeza grande y cuerpo pequeño, y se utilizaban como llavero. Los niños llevaban sus amigurumis en sus mochilas. Sin embargo en este lado del mundo, se hicieron conocidos hace algunos años. Su simpática estética y su infinita posibilidad de diseño, hacen que funcionen tanto como un juguete tejido como para posicionarse como un objeto decorativo.</p>
                               </div>
                               <div class="polaroid">
                                 <img src="img/img10.jpeg" alt="Imagen">
