--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
               <div class="carousel-item active">
-                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                  <img src="img/img27.jpeg" class="d-block home_promos_contenedor_img polaroid" alt="...">
               </div>
               <div class="carousel-item">
-                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                  <img src="img/img16.jpeg" class="d-block home_promos_contenedor_img polaroid" alt="...">
               </div>
               <div class="carousel-item">
-                  <img src="img/img27.jpeg" class="d-block w-100 home_promos_contenedor_img polaroid" alt="...">
+                  <img src="img/img25.1.png" class="d-block home_promos_contenedor_img polaroid" alt="...">
               </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -150,13 +150,13 @@
           <h2 class="accordion-header preguntas-frecuentes" id="flush-headingOne">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  Pregunta 1
+                  ¿Cómo puedo comprar?
               </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse preguntas-respuestas"
               aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+                Actualmente nuestro método de trabajo es por pedido. Te pones en contacto con nosotros y nos ponemos de acuerdo en cuanto a materiales a utilizar, colores, medidas, y tiempo de entrega.
               </div>
           </div>
       </div>
@@ -164,13 +164,13 @@
           <h2 class="accordion-header" id="flush-headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                  Preguta 2
+                  ¿Qué medios de pago aceptan?
               </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+                Por el momento solo contamos con pagos a través de mercadopago. Una vez cotizado el trabajo se te enviará el link de pago.
               </div>
           </div>
       </div>
@@ -178,13 +178,13 @@
           <h2 class="accordion-header" id="flush-headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                  Pregunta 3
+                  ¿Tienen local para retirar los trabajos?
               </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+                Lamentablemente no contamos con local a la calle. Pero presenciamos distintas ferias de artesanos, si queres saber cuando y donde encontrarnos seguinos en <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank">Instagram</a>.
               </div>
           </div>
       </div>
@@ -192,13 +192,13 @@
           <h2 class="accordion-header" id="flush-headingFour">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseThree">
-                  Pregunta 4
+                  ¿Por qué comprarles?
               </button>
           </h2>
           <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+                  Porque nuestros trabajos están hechos 100% para vos con la mejor calidad de materiales y con mucho amor. Son ideales para regalar a un ser querido, o autoregalarse.
               </div>
           </div>
       </div>
@@ -206,13 +206,16 @@
           <h2 class="accordion-header" id="flush-headingFive">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                  Pregunta 5
+                  ¿Qué cuidados debo tener a la hora de lavar?
               </button>
           </h2>
           <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quaerat, aliquid ea voluptate rem natus, modi maxime odio aut doloribus nulla tempore nihil minus saepe ratione, consequuntur ipsa vitae sit.
+                <b>Paso 1:</b> Utiliza agua fría o templada, y un poquito de jabón para prendas delicadas. <br>
+                <b>Paso 2:</b> Intenta lavar a mano, frotando suavemente. Lo podés lavar en el lavarropas con un programa para ropa delicada y con un centrifugado corto, aunque te aconsejo darle un baño a mano. <br>
+                <b>Paso 3:</b> Se debe enjuagar procurando eliminar todo el jabón. <br>
+                <b>Paso 4:</b> Sécalo suavemente con una toalla, y déjalo secar sobre la toalla al aire libre sin que le dé directamente el sol. Una vez seco podés perfumarlo con tu perfume favorito y ya está listo!                
               </div>
           </div>
       </div>
